# nixpins

./: .gitignore  Cargo.toml  default.nix  flake.nix
serde_nix/: Cargo.toml  lib.rs  ser.rs
src/: emit.rs  fetcher.rs  main.rs  pins.rs  prefetch.rs  stubs.nix  url.rs  utils.rs
src/fetcher/: flake.rs  github.rs  gitlab.rs  mod.rs
